feat: model settings
